# Zing

./: .gitignore  README.md  package-lock.json  package.json
app/api/github/fetch/: route.js
backend/: .env  config.py  database.py  index.js  models.py  package-lock.json  package.json  pyproject.toml  schemas.py
backend/agents/: github_agent.py  githubagent.js  orchestrator.py
backend/app/: config.py  main.py  models.py
backend/app/crud/auth/: auth.py
backend/crud/auth/: auth.py
backend/tools/: generate_pdf.py  github_call.py  output.json  output.txt  repos_data.json  resume.html  resume_generator.py  resume_parser.py  resume_template.html
backend/utils/: githubapi.js
frontend/: middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/login/[[...rest]]/: page.tsx
frontend/app/login_old/: page.tsx
frontend/app/signup_old/: page.tsx
frontend/lib/: api.js
frontend/services/: auth.js  dashboard.js
lessons/: auth.txt  backend.txt  frontend.txt
