[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.136.1",
    "google-genai>=2.6.0",
    "jinja2>=3.1.6",
    "octokit>=0.0.1",
    "passlib>=1.7.4",
    "pydantic-settings>=2.14.1",
    "pygithub>=2.9.1",
    "pymupdf>=1.27.2.3",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
    "weasyprint>=68.1",
    "xhtml2pdf>=0.2.17",
]
